# dcpu16-libc

./: CMakeLists.txt  Makefile  Toolchain-DCPU16.cmake
include/: stdio.h
libc/stdio/: initconsole.c  itoa.c  putchar.c  puts.c
test/: CMakeLists.txt  itoa.c  memcpy.c  printf.c  putchar.c  puts.c  stdio.c
