CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_TOOLCHAIN_FILE Toolchain-DCPU16.cmake)
SET(LIBC_BUILD_TEST OFF CACHE BOOL "Build tests")
PROJECT(DCPU16-LIBC ASM C)
INCLUDE_DIRECTORIES(include)
FILE(GLOB_RECURSE LIBC_C_SRCS libc/*.c)
FILE(GLOB_RECURSE LIBC_S_SRCS libc/*.s)
ADD_LIBRARY(c ${LIBC_C_SRCS} ${LIBC_S_SRCS})

IF(${LIBC_BUILD_TEST} MATCHES ON)
	ADD_SUBDIRECTORY("test")
ENDIF(${LIBC_BUILD_TEST} MATCHES ON)
