CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
FILE(GLOB_RECURSE LIBC_TEST_SRCS *.c)
FOREACH(SRC ${LIBC_TEST_SRCS})
	GET_FILENAME_COMPONENT(TARGET_NAME ${SRC} NAME_WE)
	MESSAGE("Adding Target: ${TARGET_NAME} from ${SRC}")
	ADD_EXECUTABLE(${TARGET_NAME} ${SRC})
	TARGET_LINK_LIBRARIES(${TARGET_NAME} "c")
ENDFOREACH(SRC ${LIBC_TEST_SRCS})
